[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-meta"

[project]
name = "sre-incident-environment"
version = "1.0.0"
description = "OpenEnv-compliant reinforcement learning environment for SRE incident response."
authors = [
    {name = "Mohit Jhajhria"}
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "httpx==0.27.2",
    "openai>=2.7.2", 
    "pyyaml==6.0.2",
    "python-multipart==0.0.12",
    "typing-extensions>=4.8.0",
    "openenv-core>=0.2.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0"
]
requires-python = ">=3.11"

[project.scripts]
server = "server.app:main"